components/policies/pod-security-standards/restricted/only-allow-net-bind-service-capability/test/deployment-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
                - NET_BIND_SERVICE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
        - name: container02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
        - name: container02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
                - NET_BIND_SERVICE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
                - NET_BIND_SERVICE
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            capabilities:
              add:
                - CHOWN
                - NET_BIND_SERVICE
      containers:
        - name: container01
          image: dummyimagename
---
