components/policies/pod-security-standards/restricted/only-allow-net-bind-service-capability/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
            - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
            - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
            - NET_BIND_SERVICE
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - CHOWN
            - NET_BIND_SERVICE
  containers:
    - name: container01
      image: dummyimagename
---
