components/policies/pod-security-standards/restricted/only-allow-net-bind-service-capability/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
    - name: container02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE
  containers:
    - name: container01
      image: dummyimagename
---
